--- a/style.css
+++ b/style.css
@@ -78,7 +78,8 @@ content {
 .price {
     border: 1px solid rgb(194, 194, 194);
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 3px 6px;
+    margin-bottom: 6px;
     display: flex;
 }
 
