--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ content {
     padding: 10px;
     margin: 0 auto; 
     margin-top: 10px;
-    background-color: rgb(253, 48, 48);
+    background-color: rgb(104, 93, 93);
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: white;
@@ -71,7 +71,7 @@ content {
     background-color: rgba(255, 255, 255, 0.9);
     padding: 5px;
     border-radius: 5px;
-    margin-top: 3px;
+    margin: 4px;
 }
 
 
@@ -108,6 +108,13 @@ content {
     top: 10px; right: 15px;
     font-size: 24px;
     cursor: pointer;
+  }
+
+  #modal-image {
+    width: 20%;
+    object-fit: cover;
+    border-radius: 5px;
+
   }
   
 
